Added images for projects. Created initial HTML skeleton.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <title>Welcome to Costa Rica</title>
 </head>
 <body>
+  <h3>.Travel.</h3>
   <h1>Welcome to Costa Rica</h1>
   <p>Experience the beauty of Costa Rica's nature and culture.</p>
+
+  <a href="#">Learn More</a>
+
+  <footer>
+    <p>This project was coded by Stephie Oj and is open source on <a href="https://github.com/stephieoj/travel-project">Github</a>.</p>
+  </footer>
 </body>
 </html>
