--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <title>Welcome to Costa Rica</title>
 </head>
 <body>
-  <h3>.Travel.</h3>
+  <div class="container">
+  <header>
+  <h3>.TRAVEL.</h3>
   <h1>Welcome to Costa Rica</h1>
-  <p>Experience the beauty of Costa Rica's nature and culture.</p>
-
-  <a href="#">Learn More</a>
-
+  <h2>Experience the beauty of Costa Rica's nature and culture.</h2>
+  <a href="#" class="glass">Learn More</a>
+  </header>
   <footer>
     <p>This project was coded by Stephie Oj and is open source on <a href="https://github.com/stephieoj/travel-project">Github</a>.</p>
   </footer>
+  </div>
 </body>
 </html>
