Build footer section, add grid layout and apply CSS.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
   <a href="#" class="glass">Learn More</a>
   </header>
   <footer>
-    <p>This project was coded by Stephie Oj and is open source on <a href="https://github.com/stephieoj/travel-project">Github</a>.</p>
+    <section class="grid">
+      <div>
+        <h3> More about Costa Rica</h3>
+        <ul>
+          <li><a href="https://www.sjoairport.com/?lang=en" target="_blank">Juan Santamaría Airport</a></li>
+          <li><a href="https://maps.app.goo.gl/zqoUcREwMAe4jbtYA">Map of Costa Rica</a></li>
+          <li><a href="https://www.vacationscostarica.com/travel/public-transportation/">Public Transport in Costa Rica</a></li>
+        </ul>
+      </div>
+      <div> 
+        <h3> About me</h3>
+        <p>Hi! My name is Stephie, I'm a travel enthusiast and a web developer with a passion for creating beautiful and functional websites. I created this page as part of a project for SheCodes Responsive Workshop to develop my coding skills.</p>
+      </div>
+      <div> 
+        <h3> About this website </h3>
+        <p>This website was created to provide information about traveling to Costa Rica and to showcase my web development skills. This project is open source on <a href="https://github.com/stephieoj/travel-project">Github</a>.</p>
+      </div>
+    </section>
   </footer>
   </div>
 </body>
