Build Main section, added 2 col grid layout, added content, applied CSS and made section responsive

--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
   <h2>Experience the beauty of Costa Rica's nature and culture.</h2>
   <a href="#" class="glass">Learn More</a>
   </header>
-  <footer>
-    <section class="grid">
+  <main>
+    <section class="grid grid-2-col">
       <div>
+      <img src="img/costa-rica-city-center.png" alt="San Jose city center" class="img-city-center">
+      </div>  
+      <div>
+      <h2> Why Costa Rica?</h2>
+      <h3> The land of Pura Vida </h3>
+      <p> Costa Rica offers a unique blend of stunning natural beauty, rich biodiversity, and vibrant culture. From its lush rainforests and pristine beaches to its active volcanoes and charming towns, Costa Rica is a paradise for nature lovers and adventure seekers alike.</p>
+      </div>
+    </section>
+  </main>
+  </main>
+  <footer>
+    <section class="grid grid-3-col">
+      <div class="footer-col-1">
         <h3> More about Costa Rica</h3>
         <ul>
           <li><a href="https://www.sjoairport.com/?lang=en" target="_blank">Juan Santamaría Airport</a></li>
