Added Destinations section, added card grid layout, applied CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <section class="grid grid-2-col">
       <div>
-      <img src="img/costa-rica-city-center.png" alt="San Jose city center" class="img-city-center">
+      <img src="img/costa-rica-city-center.png" alt="San Jose city center">
       </div>  
       <div>
       <h2> Why Costa Rica?</h2>
@@ -28,7 +28,58 @@
       <p> Costa Rica offers a unique blend of stunning natural beauty, rich biodiversity, and vibrant culture. From its lush rainforests and pristine beaches to its active volcanoes and charming towns, Costa Rica is a paradise for nature lovers and adventure seekers alike.</p>
       </div>
     </section>
-  </main>
+    <section class="destinations">
+      <h2> Top Destinations in Costa Rica</h2>
+      <div class="grid grid-3-equal-col">
+        <div class="card">
+          <div class="card-header">
+          <img src="/img/monteverde_cloud_forest.png" alt="Monteverde Cloud Forest" class="img-card">
+          </div>
+          <div class="card-body">
+          <h3>Monteverde Cloud Forest</h3>
+          <div class="card-description">
+          <p> Explore the mystical cloud forests of Monteverde, home to a diverse array of flora and fauna. Enjoy hiking trails, zip-lining adventures, and bird-watching opportunities.</p>
+          </div>
+          <h5> Address</h5>
+          <p>Monteverde, Puntarenas Province, Costa Rica</p>
+          </div>
+          <div class="card-footer">
+          <a href="https://www.monteverdeinfo.com/cloud-forests" target="_blank"class="learn-more-btn">Learn more</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+          <img src="/img/manuel_antonio.png" alt="Manuel Antonio National Park" class="img-card">
+          </div>
+          <div class="card-body"> 
+          <h3>Manuel Antonio National Park</h3>
+          <div class="card-description">
+          <p> Discover the stunning beaches and lush rainforests of Manuel Antonio National Park. Spot wildlife such as monkeys, sloths, and colorful birds while enjoying the park's beautiful trails and beaches.</p>
+          </div>
+          <h5> Address</h5>
+          <p>Manuel Antonio, Quepos, Costa Rica</p>
+          </div>
+          <div class="card-footer">
+          <a href="https://manuelantoniopark.net/" target="_blank"class="learn-more-btn">Learn more</a>
+          </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          <img src="/img/arenal-volcano.png" alt="Arenal Volcano" class="img-card">
+        </div>
+        <div class="card-body">
+          <h3>Arenal Volcano NationalPark</h3>
+          <div class="card-description">
+          <p> Experience the awe-inspiring Arenal Volcano, one of Costa Rica's most iconic landmarks. Relax in nearby hot springs, hike through lava fields, and take in breathtaking views of the volcano and surrounding landscapes.</p>
+          </div>
+          <h5> Address</h5>
+          <p>Arenal Volcano National Park, La Fortuna, Costa Rica</p>
+        </div>
+        <div class="card-footer"> 
+          <a href="https://www.arenal.net/arenal-volcano-national-park" target="_blank" class="learn-more-btn">Learn more</a>
+      </div>
+      </div>
+    </section>
   </main>
   <footer>
     <section class="grid grid-3-col">
