Added google map embed to cards

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       <h2> Top Destinations in Costa Rica</h2>
       <div class="grid grid-3-equal-col">
         <div class="card">
-          <div class="card-header">
+          <div class="card-header grid grid-2-col">
           <img src="/img/monteverde_cloud_forest.png" alt="Monteverde Cloud Forest" class="img-card">
-          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125620.40173834066!2d-84.90398360034723!3d10.29075928482527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0190abebeddc9%3A0x6655a93f1b3ad827!2sPuntarenas%20Province%2C%20Monteverde%2C%20Costa%20Rica!5e0!3m2!1sen!2suk!4v1757348573515!5m2!1sen!2suk"style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="embed"></iframe>
+        </div>
           <div class="card-body">
           <h3>Monteverde Cloud Forest</h3>
           <div class="card-description">
@@ -48,9 +49,10 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-header">
+          <div class="card-header grid grid-2-col">
           <img src="/img/manuel_antonio.png" alt="Manuel Antonio National Park" class="img-card">
-          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3936.331072475408!2d-84.13956282443532!3d9.392313283195021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa1719c9ba9f54b%3A0x95e66139ce5c4a86!2sManuel%20Antonio%20National%20Park!5e0!3m2!1sen!2suk!4v1757349904220!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="embed"></iframe>
+        </div>
           <div class="card-body"> 
           <h3>Manuel Antonio National Park</h3>
           <div class="card-description">
@@ -64,8 +66,9 @@
           </div>
       </div>
       <div class="card">
-        <div class="card-header">
+        <div class="card-header grid grid-2-col">
           <img src="/img/arenal-volcano.png" alt="Arenal Volcano" class="img-card">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.4996798573925!2d-84.73072362442755!3d10.461218864927611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa00e962bb51111%3A0x1062d8c68ecdfecf!2sParque%20Nacional%20Volc%C3%A1n%20Arenal!5e0!3m2!1sen!2suk!4v1757350007482!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="embed"></iframe>
         </div>
         <div class="card-body">
           <h3>Arenal Volcano NationalPark</h3>
