Updated Learn more link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h3>.TRAVEL.</h3>
   <h1>Welcome to Costa Rica</h1>
   <h2>Experience the beauty of Costa Rica's nature and culture.</h2>
-  <a href="#" class="glass">Learn More</a>
+  <a href="#more" class="glass">Learn More</a>
   </header>
   <main>
     <section class="grid grid-2-col">
@@ -24,6 +24,7 @@
       </div>  
       <div>
       <h2> Why Costa Rica?</h2>
+      <a name = "more"></a>
       <h3> The land of Pura Vida </h3>
       <p> Costa Rica offers a unique blend of stunning natural beauty, rich biodiversity, and vibrant culture. From its lush rainforests and pristine beaches to its active volcanoes and charming towns, Costa Rica is a paradise for nature lovers and adventure seekers alike.</p>
       </div>
